--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Deoployment pipeline
+name: Deployment pipeline
 
 on:
   push:
@@ -7,13 +7,13 @@ on:
 
 jobs:
   deployment_pipeline:
-  runs-on: ubuntu-18.04
-  steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '12.x'
-    - name: npm install
-      run: npm i
-    - name: lint
-      run: npm run lint
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: npm install
+        run: npm i
+      - name: lint
+        run: npm run lint
