--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,5 @@ jobs:
             heroku_api_key: ${{secrets.HEROKU_API_KEY}}
             heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
             heroku_email: ${{secrets.MY_EMAIL}}
+            healthcheck: "https://${{secrets.HEROKU_APP_NAME}}.herokuapp.com/version"
+            checkstring: "1"
