--- a/.github/workflows/testPipeline.yml
+++ b/.github/workflows/testPipeline.yml
@@ -30,5 +30,5 @@ jobs:
       - name: commit messages does not contain '#fghj'
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
-        if: ! contains(env.COMMIT_MESSAGES, '#fghj')
+        if: (! contains(env.COMMIT_MESSAGES, '#fghj'))
         run: echo no it doesnt
