--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,7 +42,7 @@ jobs:
           rollbackonhealthcheckfailed: true
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.33.0
-        if: ${{github.event_name == 'push'}} && (! contains(${{ join(toJson(github.event.commits.*.message), '') }}, '#skip'))
+        if: ${{github.event_name == 'push'}} && (! contains(join(${{ github.event.commits.*.message }}, ''), '#skip'))
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           DEFAULT_BUMP: patch
