--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,6 +40,14 @@ jobs:
           healthcheck: "https://${{secrets.HEROKU_APP_NAME}}.herokuapp.com/health"
           checkstring: ok
           rollbackonhealthcheckfailed: true
+      - name: TMP echo msges
+        run: echo ${{ github.event.commits.*.message }}
+      - name: TMP echo msges
+        run: echo ${{ github.event.commits.*.message }}
+      - name: TMP echo join
+        run: echo join(${{ github.event.commits.*.message }}, '')
+      - name: TMP echo contains
+        run: echo contains(join(${{ github.event.commits.*.message }}, ''), '#skip')
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.33.0
         if: ${{github.event_name == 'push'}} && (! contains(join(${{ github.event.commits.*.message }}, ''), '#skip'))
