--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -58,8 +58,8 @@ jobs:
           rollbackonhealthcheckfailed: true
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.33.0
-        if: ${{github.event_name == 'push'}} && (! env.COMMIT_MESSAGES_CONTAINS_SKIP)
+        if: ${{github.event_name == 'push'}} && env.COMMIT_MESSAGES_NOT_CONTAINS_SKIP
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           DEFAULT_BUMP: patch
-          COMMIT_MESSAGES_CONTAINS_SKIP: ${{ contains(join(github.event.commits.*.message, ''), '#skip') }}
+          COMMIT_MESSAGES_NOT_CONTAINS_SKIP: ${{ ! contains(join(github.event.commits.*.message, ''), '#skip') }}
