--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,21 +49,25 @@ jobs:
           COMMIT_MESSAGES_NOT_CONTAINS_SKIP: ${{ ! contains(join(github.event.commits.*.message, ''), '#skip') }}
       - name: The job has succeeded
         uses: 8398a7/action-slack@v3
-        fields: repo,message,commit,author,eventName,ref,workflow,job,took
-        custom_payload: |
-          {
-            username: 'github_action',
-            attachments: [{
-              color: 'good',
-              text: `Job succeded in ${process.env.AS_TOOK}`,
-            }]
-          }
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,author,eventName,ref,workflow,job,took
+          custom_payload: |
+            {
+              username: 'github_action',
+              attachments: [{
+                color: 'good',
+                text: `Job succeded in ${process.env.AS_TOOK}`,
+              }]
+            }
         if: ${{ success() }}
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: The job has failed
         uses: 8398a7/action-slack@v3
-        fields: repo,message,commit,author,eventName,ref,workflow,job,took
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,author,eventName,ref,workflow,job,took
         if: ${{ failure() }}
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
