successful custom status?

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,7 +50,7 @@ jobs:
       - name: The job has succeeded
         uses: 8398a7/action-slack@v3
         with:
-          status: ${{ job.status }}
+          status: custom
           fields: repo,message,commit,author,eventName,ref,workflow,job,took
           custom_payload: |
             {
